Fix alignment and responsiveness issues

--- a/style.css
+++ b/style.css
@@ -16,13 +16,14 @@ body {
 .container {
   width: clamp(70vw, 50vw, 25rem);
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
 }
 
 main.table-view {
   width: 100%;
+  align-items: center;
 }
 
 header {
@@ -134,11 +135,19 @@ footer {
   display: flex;
 }
 
+pre {
+  width: clamp(60vw, 70vw, 80vw);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 table {
   width: 80%;
   max-width: 90%;
   border-collapse: collapse;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 th,
